Se crea la primera ruta para series

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.jpa.hibernate.ddl-auto=update
 # Ver todas las operaciones de la base de datos
 spring.jpa.show-sql=true
 spring.jpa.format-sql=true
+
+# cambiar puerto por defecto de Spring Boot
+# server.port=8001
